--- a/photosharingapp/src/app/app.component.html
+++ b/photosharingapp/src/app/app.component.html
@@ -1,2 +1,12 @@
+<p>
+  <mat-toolbar color="warn">
+    <mat-toolbar-row>
+      <span>PHOTO SHARING APP</span>
+      <span class="example-spacer"></span>
+      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+        <mat-icon>menu</mat-icon>
+      </button>
+    </mat-toolbar-row>
+
 
 <router-outlet></router-outlet>
