--- a/photosharingapp/src/app/view/view.component.html
+++ b/photosharingapp/src/app/view/view.component.html
@@ -1,14 +1,34 @@
-<div class="card border-light mb-3" style="max-width: 12rem;  background-color: grey; height: 120px;">
+<!-- <div class="card border-light mb-3" style="max-width: 12rem;  background-color: grey; height: 120px;">
     <div class="card-header">Vuyo</div>
     <img src="../../assets/mirabel.jpg" class="card-img-top" alt="mirabel" style="width: 120px;">
     <div class="card-body">
-      <!-- <h5 class="card-title">Card title</h5> -->
-      <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       
       <img src="../../assets/heart.svg" class="like">
       <img src="../../assets/chat.svg" class="chat">
       <img src="../../assets/share.svg"  class="share">
 
     </div>
-  </div>
-
+  </div> -->
+<body>
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>Vuyo</mat-card-title>
+      <mat-card-subtitle>14:30</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="../../assets/mirabel.jpg" alt="Photo of Mirabel">
+    <mat-card-content>
+      <p>Caption</p>
+    
+    </mat-card-content>
+    <mat-card-actions>
+      <!-- <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button> -->
+      <img src="../../assets/favorite_FILL0_wght400_GRAD0_opsz24.svg" class="like">
+      <img src="../../assets/chat.svg" class="chat">
+      <img src="../../assets/x.svg"  class="delete">
+    </mat-card-actions>
+  </mat-card>
+</body>
