--- a/photosharingapp/src/app/app.component.html
+++ b/photosharingapp/src/app/app.component.html
@@ -1,12 +1,24 @@
 <p>
-  <mat-toolbar color="warn">
+  <mat-toolbar class="navbar">
     <mat-toolbar-row>
       <span>PHOTO SHARING APP</span>
       <span class="example-spacer"></span>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-        <mat-icon>menu</mat-icon>
-      </button>
+      
+        
+        
+    
+    
+        
+      
+       <button mat-button [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon></button>
+        
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item>profile</button>
+          <button mat-menu-item>sign out</button>
+        </mat-menu>
+       
     </mat-toolbar-row>
 
+    
 
 <router-outlet></router-outlet>
