--- a/photosharingapp/src/app/app.component.html
+++ b/photosharingapp/src/app/app.component.html
@@ -1,4 +1,4 @@
-<p>
+
   <mat-toolbar color="warn">
     <mat-toolbar-row>
       <span>PHOTO SHARING APP</span>
@@ -8,5 +8,5 @@
       </button>
     </mat-toolbar-row>
 
-
+<button (click)="add()">+</button>
 <router-outlet></router-outlet>
