--- a/photosharingapp/src/app/view/view.component.html
+++ b/photosharingapp/src/app/view/view.component.html
@@ -31,4 +31,9 @@
       <img src="../../assets/x.svg"  class="delete">
     </mat-card-actions>
   </mat-card>
+
+ 
 </body>
+
+<!-- <app-navbar></app-navbar> -->
+
