--- a/photosharingapp/src/app/app.component.html
+++ b/photosharingapp/src/app/app.component.html
@@ -1,24 +1,3 @@
-<p>
-  <mat-toolbar class="navbar">
-    <mat-toolbar-row>
-      <span>PHOTO SHARING APP</span>
-      <span class="example-spacer"></span>
-      
-        
-        
-    
-    
-        
-      
-       <button mat-button [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon></button>
-        
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item>profile</button>
-          <button mat-menu-item>sign out</button>
-        </mat-menu>
-       
-    </mat-toolbar-row>
-
-    
-
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
+
