Navbar and Button

--- a/photosharingapp/src/app/navbar/navbar.component.html
+++ b/photosharingapp/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
       
       
           
-        
+        <button mat-raised-button color="" (click)="add()">+</button>
          <button mat-button [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon></button>
           
           <mat-menu #menu="matMenu">
