--- a/photosharingapp/src/app/view/view.component.html
+++ b/photosharingapp/src/app/view/view.component.html
@@ -1,17 +1,6 @@
-<!-- <div class="card border-light mb-3" style="max-width: 12rem;  background-color: grey; height: 120px;">
-    <div class="card-header">Vuyo</div>
-    <img src="../../assets/mirabel.jpg" class="card-img-top" alt="mirabel" style="width: 120px;">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      
-      <img src="../../assets/heart.svg" class="like">
-      <img src="../../assets/chat.svg" class="chat">
-      <img src="../../assets/share.svg"  class="share">
 
-    </div>
-  </div> -->
-<body>
+<app-navbar></app-navbar>
+
   <mat-card class="example-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
@@ -33,7 +22,7 @@
   </mat-card>
 
  
-</body>
+
 
 <!-- <app-navbar></app-navbar> -->
 
