--- a/photosharingapp/src/app/view/view.component.html
+++ b/photosharingapp/src/app/view/view.component.html
@@ -17,7 +17,7 @@
       <button mat-button>SHARE</button> -->
       <img src="../../assets/favorite_FILL0_wght400_GRAD0_opsz24.svg" class="like">
       <img src="../../assets/chat.svg" class="chat">
-      <img src="../../assets/x.svg"  class="delete">
+      <img src="../../assets/x.svg"  class="delete" (click)="deletePost(availableImages.id)">
     </mat-card-actions>
   </mat-card>
 
