--- a/photosharingapp/src/app/user-profile/user-profile.component.html
+++ b/photosharingapp/src/app/user-profile/user-profile.component.html
@@ -1,1 +1,20 @@
-<p>user-profile works!</p>
+
+<form action="">
+<div class="row">
+    <mat-form-field id="image" appearance="outline">
+      <mat-label for="image">Image</mat-label>
+    <img src="{{userProfile.userImage}}" alt="">
+    </mat-form-field>
+
+    <mat-form-field id="name" appearance="outline">
+        <mat-label for="name">Name</mat-label>
+       <p>{{userProfile.userName}}</p>
+      </mat-form-field>
+    
+  <mat-form-field id="caption" appearance="outline">
+    <mat-label for="caption">Caption</mat-label>
+   <p>{{userProfile.userEmail}}</p>
+  </mat-form-field>
+
+</div>
+</form>
