--- a/photosharingapp/src/app/login/login.component.html
+++ b/photosharingapp/src/app/login/login.component.html
@@ -1,24 +1,13 @@
-<p>login works!</p>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TO DO List</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
-  
-</head>
+
 
 <body>
     
-
+<!-- 
     
 <section class="vh-100 bg-image ">
   <nav class="justify-content-end mine">
     <button type="submit" class="btn btn-default mt-3 text" href="Register.html">LOGIN</button><button type="submit" class="btn btn-default mt-3 text">REGISTER</button>
-    </nav>
+    </nav> -->
     
   <div class="mask d-flex align-items-center h-100 gradient-custom-3">
     <div class="container h-100 height">
@@ -27,7 +16,7 @@
           <div class="card" style="border-radius: 15px;">
             <div class="card-body p-5">
               <div class="container h-100 mb-0">
-                <i>logo</i><h2 class="text-uppercase text-end">WELCOME BACK</h2>
+                <h2 class="text-uppercase text-end">WELCOME BACK</h2>
               <p class="d-flex justify-content-end text-end text-muted">login to your account</p>
                 </div>
 
@@ -36,7 +25,7 @@
                 <div class="form-outline mb-4">
                
                   <input type="text" id="loginUser" class="form-control form-control-lg" 
-                  placeholder="Username"/>
+                  placeholder="Username">
                  
                 </div>
 
@@ -64,9 +53,26 @@
       </div>
     </div>
   </div>
-</section>
-    
 
-  <script src="Login.js"></script>
-</body>
-</html>
+   
+    <!-- </section> -->
+
+<!-- <i></i><h2 class="WELCOME">WELCOME BACK</h2>
+              <p class="Login to your account">Login to your account</p>
+                
+
+    <mat-form-field class="WELCOME" id="username" appearance="outline">
+        <mat-label for="username">USERNAME</mat-label>
+    <input matInput formControlName="name" required="true" />
+    
+  </mat-form-field>
+
+  <mat-form-field class="WELCOME" id="password" appearance="outline">
+    <mat-label for="password">PASSWORD</mat-label>
+    <input matInput formControlName="name" required="true" />
+  </mat-form-field>
+
+  <p class="WELCOME">Don't have an account? <a href="Register.html"><u>Sign Up</u></a></p>
+  <button class="WELCOME" mat-raised-button color="primary" type="submit">login</button>
+   -->
+
