--- a/photosharingapp/src/app/login/login.component.html
+++ b/photosharingapp/src/app/login/login.component.html
@@ -16,8 +16,8 @@
           <div class="card" style="border-radius: 15px;">
             <div class="card-body p-5">
               <div class="container h-100 mb-0">
-                <h2 class="text-uppercase text-end">WELCOME BACK</h2>
-              <p class="d-flex justify-content-end text-end text-muted">login to your account</p>
+                <h2 class="WELCOME BACK">WELCOME BACK</h2>
+              <p class="Login to your account">Login to your account</p>
                 </div>
 
               <div> 
