--- a/photosharingapp/src/app/login/login.component.css
+++ b/photosharingapp/src/app/login/login.component.css
@@ -14,6 +14,7 @@
     }
     .color{
         background-color: black;
+        color: white;
     }
     
     /* #profile{
@@ -38,9 +39,17 @@ mat-form-field {
         text-overflow: ellipsis;
      } */
     .WELCOME{
-        margin-left: 45%;
+        margin-left: 3%;
 
     }
     .Login{
-        margin-left: 45%;
+        margin-left: 5%;
+    }
+    .container{
+        background-color: white;
+        margin-left: 30%;
+        margin-right: 30%;
+    }
+    input{
+        margin-bottom: 4%;
     }
