--- a/photosharingapp/src/app/login/login.component.html
+++ b/photosharingapp/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<p>login works!</p>
+<!-- <p>login works!</p>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -69,4 +69,4 @@
 
   <script src="Login.js"></script>
 </body>
-</html>
+</html> -->
