--- a/photosharingapp/src/app/view/view.component.html
+++ b/photosharingapp/src/app/view/view.component.html
@@ -1,25 +1,26 @@
 
 <app-navbar></app-navbar>
-
-  <mat-card class="example-card">
+<div >
+  <mat-card class="example-card" *ngFor ="let post of posts">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>{{User.name}}</mat-card-title>
-      <mat-card-subtitle>14:30</mat-card-subtitle>
+      <mat-card-title>{{post.name}}</mat-card-title>
+      <mat-card-subtitle></mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="{{User.image}}" alt="Photo of Mirabel">
-    <mat-card-content>
-      <p>{{User.caption}}</p>
+    <img mat-card-image src="{{post.image}}" alt="">
     
+    <mat-card-content>
+      <p>{{post.caption}}</p>
     </mat-card-content>
+
     <mat-card-actions>
-      <!-- <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button> -->
-      <img src="../../assets/favorite_FILL0_wght400_GRAD0_opsz24.svg" class="like">
-      <img src="../../assets/chat.svg" class="chat">
-      <img src="../../assets/x.svg"  class="delete">
+  
+      <i><img src="../../assets/favorite_FILL0_wght400_GRAD0_opsz24.svg" class="like"></i>
+      <i><img src="../../assets/chat.svg" class="chat"></i>
+      <i><img src="../../assets/x.svg"  class="delete"></i>
     </mat-card-actions>
   </mat-card>
+</div>
 
  
 
