--- a/photosharingapp/src/app/register/register.component.css
+++ b/photosharingapp/src/app/register/register.component.css
@@ -1,305 +1,188 @@
-
-    .container{
-    position: relative;
-    top: 50px;
-    max-width: 390px;
-    width: 100%;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    
-    }
-    
-    .container .forms{
-    display: flex;
-    align-items: center;
-    height: 400px;
-    width: 200%;
-    transition: height 0.2s ease;
-    }
-    
-    
-    
-    .input-field{
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-    
-    
-    /* border-style: double;  */
-     margin: 10px;
-    }
-    
-    .non-existing-account{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    }
-    
-    .existing-account{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    } 
-    
-    /* body {
-    font-family: sans-serif;
-    margin: 0 50px;
-    background-color: #e5e5e5;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    } */
-    
-    .login-link{
-    color: black !important;
-    font-weight: bold;
-    text-decoration: none;
-    }
-    
-    h6{
-    color: black !important;
-    }
-    
-    #registerButton{
-    background-color: black;
-    color: white;
-    border-radius: 5px;
-    width: 290px;
-    height: 30px;
-    position: relative;
-    top: 10px;
-    right: 5px;
-    }
-    
-
-    
-    input{
-    width: 290px;
-    height: 30px;
-    
-    
-    }
-    ::placeholder{
-    position: relative;
-    left: 30px;
-    
-    
-    }
-    
-    h5{
-    padding-left: 180px;
-    font-weight: bolder;
+.row {
     margin: 0;
-    position: relative;
-    bottom: 50px;
-    right: 30px;
-    }
-    
-    .create{
-    padding-left: 180px; 
-    margin: 0;
-    position: relative;
-    bottom: 50px;
-    right: 30px;
-    }
-    
-    .material-symbols-outlined{
-    position: relative;
-    right: 285px;
-    }
-    
-    #username{
-    position: relative;
-    left: 5px;
-    }
-    
-    #loginButton{
-    background-color: black;
-    color: white;
-    border-radius: 5px;
-    width: 290px;
-    height: 30px;
-    position: relative;
-    top: 10px; 
-    right: 10px;
-    }
-    
-    .signup-link{
-    color: black !important;
-    font-weight: bold;
-    text-decoration: none;
-    }
-    
-    .input-field{
-    position: relative fixed;
-    left: 20px;
-    
-    }
-    
-    #login{
-    position: relative;
-    /* left: 470px; */
-    font-weight: bold;
-    
-    } 
-    
-    #register{
-    position: relative;
-    /* right: 50px; */
-    font-weight: bold;
-    text-decoration: none;
-    
-    }
-    
-    .modal-dialog{
-    display: flex;
+    padding:0 ;
     align-items: center;
     justify-content: center;
-    }
-    
-    .container-one{
-    position: relative;
-    top: 50px;
-    max-width: 450px;
-    width: 100%;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    height: 400px;
-    }
-    
-    .modal-title{
-    font-weight: bolder;
-    position: relative;
-    bottom: 25px;
-    font-size: large; 
-    right: 50px;
-    }
-    
-    #cancelButton{
-    position: relative;
-    left: 180px;
-    height: 30px;
-    width: 60px;
-    border-radius: 8px;
-    border: 0;
-    background-color: rgb(221, 216, 216);
-    bottom: 50px;
-    }
-    
-    #add{
-    position: relative;
-    left: 200px;
-    height: 30px;
-    width: 60px;
-    border-radius: 8px;
-    border: 0;
-    background-color: black;
-    color: white;
-    bottom: 50px;
-    }
-    
-    .title{
-    position: relative;
-    right: 52px;
-    bottom: 10px;
-    
-    }
-    
-    
-    .descriptionOne{
-    position: relative;
-    right: 50px;
-    top: 10px;
-    }
-    
-    
-    .date{
-    position: relative;
-    right: 50px;
-    } 
-    
-    #textInput{
-    position: relative;
-    left: 50px;
-    bottom: 30px;
-    }
-    
-    #dateInput{
-    position: relative;
-    left: 50px;
-    bottom: 30px;
-    }
-    
-    textarea{
-    position: relative;
-    left: 50px;
-    /* height: 100px; */
-    width: 290px;
-    bottom: 30px;
-    }
-    
-    
-    tr{
-    
-    background: white;
-    height: 70px;
-    width: 100px;
-    
-    }
-    
-    .pm-5{
-    
-    padding: 100px;
-    background-color: white;
-    width: 900px;
-    position: relative;
-    left: 600px;
-    top: 50px;
-    
-    
-    
-    }
-    
-    #button{
     display: flex;
+}
+ 
+
+
+img{
+    background-color: rgb(248, 245, 245);
+}
+
+span{
     position: relative;
-    left: 600px;
+  top: 80px; 
+  padding: 0 30px;
+}
+
+
+.navReg{
+    font-weight: bolder;
+    font-size: xx-large;    
+}
+
+.navLog{
+    font-weight: bolder;
+    font-size: xx-large;
+    color: rgb(189, 188, 188);
+    position: relative;
+    left: 130px;   
+}
+
+.card-auth{
+    display: flex ;
+    justify-content: center;
+    background-color: lightgrey;
+    width: 400px;
+    height: 355px;
+    position: relative;
+    top: 130px;
+     
+}
+
+#fullname{
+    margin: 10px;
+
+}
+
+#usernameInput{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border-radius: 15px; */
+    border-color: white;
+    width: 300px;
     height: 40px;
-    width: 100px;
-    border-radius: 5px;
-    border: 0;
-    background-color: black;
-    color: white;
-    bottom: 70px;
+    /* font-weight: bold; */
+    font-size: 17px;
+    color: black;
+    position: relative;
+    /* left: 2px; */
+    top: 90px;
+}
+
+#email{
+    margin: 10px;
+}
+
+#emailInput{
     justify-content: center;
     align-items: center;
+    display: flex;
+    /* border-radius: 15px; */
+    border-color: white;
+    width: 300px;
+    height: 40px;
+    /* font-weight: bold; */
+    font-size: 17px;
+    color: black;
+    position: relative;
+    top: 90px;
+    
+}
+
+#password{
+    
+    margin: 10px; 
+}
+
+#passwordInput{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    /* border-radius: 15px; */
+    border-color: white;
+    width: 300px;
+    height: 40px;
+    /* font-weight: bold; */
+    font-size: 17px;
+    color: black;
+    position: relative;
+    right: 10px;
+    top: 90px;
+}
+
+#c_password{
+    
+    margin: 10px; 
+}
+
+#c_passwordInput{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    /* border-radius: 15px; */
+    border-color: white;
+    width: 300px;
+    height: 40px;
+    /* font-weight: bold; */
+    font-size: 17px;
+    color: black;
+    position: relative;
+    right: 10px;
+    top: 90px;
+}
+
+
+#registerButton{
+    background-color: black;
+    border-radius: 10px;
+    color: white;
+    margin-left: 35px;
+    height: 50px;
+    width: 100px;
     font-weight: bold;
-    }
-    
-    #view{
+    font-size: 20px;
     position: relative;
-    left: 1px;
-    color: orange;
-    }
-    
-    #edit{
+    top: 140px;
+      
+}
+
+#existingAccount{
+    /* font-weight: bold; */
+    font-style: italic;
+    /* font-size: larger; */
+    /* padding: 0 30px; */
     position: relative;
-    left: 6px;
-    color: skyblue;
-    }
+    /* top: 200px; */
+    left: 130px;
     
-    #delete{
-    position: relative;
-    left: 10px;
-    color: orangered;
-    }
-    
-    /* #textTwo{
-    left: ;
-    } */
+}
+
+#loginName{
+    color: blue; 
+
+}
+
+#buttonFor-register{
+    text-align: center;
+    padding-right: 35px;
+     
+}
+
+
+
+/* .alert-danger-fullname{
+     color: red;
+     font-weight: bold;
+     font-style: italic;
+     font-size: large;
+     
+} */
+
+/* .alert-danger-email{
+    color: red;
+    font-weight: bold;
+   font-style: italic;
+    font-size: large;
+} */
+
+/* .alert-danger-password{
+    color: red;
+    font-weight: bold;
+   font-style: italic;
+    font-size: large;
+} */
