--- a/photosharingapp/src/app/view/view.component.html
+++ b/photosharingapp/src/app/view/view.component.html
@@ -1,6 +1,8 @@
 
 <app-navbar></app-navbar>
-<div >
+<h1 class="feed">FEED</h1>
+
+<div class="gird">
   <mat-card class="example-card" *ngFor ="let post of posts">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
@@ -14,10 +16,12 @@
     </mat-card-content>
 
     <mat-card-actions>
-  
+      <mat-icon svgIcon="thumbs-up" aria-hidden="false" aria-label="Example thumbs up SVG icon"></mat-icon>
+
+
       <i><img src="../../assets/favorite_FILL0_wght400_GRAD0_opsz24.svg" class="like"></i>
       <i><img src="../../assets/chat.svg" class="chat"></i>
-      <i><img src="../../assets/x.svg"  class="delete"></i>
+      <!-- <i><img src="../../assets/x.svg"  class="delete"></i> -->
     </mat-card-actions>
   </mat-card>
 </div>
