--- a/photosharingapp/src/app/login/login.component.html
+++ b/photosharingapp/src/app/login/login.component.html
@@ -1,73 +1,19 @@
-<!-- <p>login works!</p>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TO DO List</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
-  
-</head>
+<div class="container">
+  <div class="card">
 
-
-<body>
-    
-
-    
-<section class="vh-100 bg-image ">
-  <nav class="justify-content-end mine">
-    <button type="submit" class="btn btn-default mt-3 text" href="Register.html">LOGIN</button><button type="submit" class="btn btn-default mt-3 text">REGISTER</button>
-    </nav>
-    
-  <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-    <div class="container h-100 height">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-          <div class="card" style="border-radius: 15px;">
-            <div class="card-body p-5">
-              <div class="container h-100 mb-0">
-                <i>logo</i><h2 class="text-uppercase text-end">WELCOME BACK</h2>
-              <p class="d-flex justify-content-end text-end text-muted">login to your account</p>
-                </div>
-
-              <div> 
-
-                <div class="form-outline mb-4">
-               
-                  <input type="text" id="loginUser" class="form-control form-control-lg" 
-                  placeholder="Username"/>
-                 
-                </div>
-
-                <div class="form-outline mb-4">
-                  <i class="fas fa-lock"></i>
-                  <input type="password" id="loginPassword" class="form-control form-control-lg" placeholder="Password"/>
-                 
-                </div>
-
-       
-                
-                <div class="d-flex justify-content-center" >
-                  
-                  <button id="login" type="submit" class="btn btn-primary btn-block mb-4 color bg-dark" onclick="login()">Sign in</button>
-                </div>
-
-                <p class="text-center text-muted mt-3 mb-0">Don't have an account? <a href="Register.html"
-                  class="fw-bold text-body"><u>Sign Up</u></a></p>
-
-              </div>
-
-            </div>
-          </div>
-        </div>
+      <div class="card-head">
+          <h2>WELCOME BACK.</h2>
+          <p>Login to your account</p>
       </div>
-    </div>
-  </div>
-</section>
-    
+      <form action="">
+          <input type="text" placeholder="*Username" >
+          
 
-  <script src="Login.js"></script>
-</body>
-</html> -->
+          <input type="password" placeholder="*Password" >
+          
+      </form>
+
+      <button>Login</button>
+      <p class="login">Don`t have an account? <a href="">Register</a>.</p>
+  </div>
+</div>
