--- a/photosharingapp/src/app/view/view.component.html
+++ b/photosharingapp/src/app/view/view.component.html
@@ -2,14 +2,14 @@
 <app-navbar></app-navbar>
 <h1 class="feed">FEED</h1>
 
-<div class="gird">
-  <mat-card class="example-card" *ngFor ="let post of posts">
+<div class="container">
+  <mat-card class="post-card" *ngFor ="let post of posts">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>{{post.name}}</mat-card-title>
       <mat-card-subtitle></mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="{{post.image}}" alt="">
+    <img mat-card-image class="image" src="{{post.image}}" alt="">
     
     <mat-card-content>
       <p>{{post.caption}}</p>
