--- a/photosharingapp/src/app/view/view.component.css
+++ b/photosharingapp/src/app/view/view.component.css
@@ -14,7 +14,7 @@
   }
   
   .example-header-image {
-    /* background-image: url(); */
+    background-image: url(https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.pnghttps://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png);
     background-size: cover;
   }
 
