--- a/photosharingapp/src/app/navbar/navbar.component.html
+++ b/photosharingapp/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
         
           
           
-      
+        
       
           
         <button mat-raised-button color="" (click)="add()">+</button>
@@ -15,6 +15,7 @@
           <mat-menu #menu="matMenu">
             <button mat-menu-item>profile</button>
             <button mat-menu-item>sign out</button>
+            <button mat-menu-item>login</button>
           </mat-menu>
          
       </mat-toolbar-row>
