Register almost done

--- a/photosharingapp/src/app/navbar/navbar.component.html
+++ b/photosharingapp/src/app/navbar/navbar.component.html
@@ -16,6 +16,7 @@
             <button mat-menu-item>profile</button>
             <button mat-menu-item>sign out</button>
             <button mat-menu-item>login</button>
+            <button mat-menu-item (click)="reg()">Register</button>
           </mat-menu>
          
       </mat-toolbar-row>
