--- a/photosharingapp/src/app/register/register.component.css
+++ b/photosharingapp/src/app/register/register.component.css
@@ -1,47 +1,24 @@
-
-.card {
-    margin-left: 35%;
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    height: 400px;
-    /* background: blue; */
-    padding: 2em;
-    border: 1px solid black;
-    border-radius: 10px;
-    box-shadow: 2px 2px 5px 2px black;
+.content {
+    padding-top: 10px;
+    align-items: center;
 }
 
-.card-head {
-    margin-left: 100px;
+.row {
+    display: list-item;
+    gap: 10px
 }
 
+mat-form-field {
+    width: 60%;
+}
+
+.class{
+    align-items: center;
+}
 
 form {
-    margin-left: 50px;
-}
-
-input {
-    width: 200px;
-    height: 35px;
-    color: black;
-    margin-top: 10px;
-}
-
-button {
-    width: 210px;
-    height: 35px;
-    color: white;
-    background: black;
-    border: none;
-    margin-left: 50px;
-    margin-top: 10px;
-}
-
-.login {
-    width: 200px;
-    text-align: center;
-    margin-left: 50px;
-    margin-top: 10px;
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+    align-items: center;
 }
