--- a/photosharingapp/src/app/register/register.component.html
+++ b/photosharingapp/src/app/register/register.component.html
@@ -4,6 +4,7 @@
     <h2>SIGN UP</h2>
     <p>Create your new account.</p>
 </div>
+
 <form [formGroup]="registerForm" (ngSubmit)="register()">
 
 <div mat-dialog-content class="container">
@@ -28,7 +29,7 @@
         <input matInput formControlName="password" required="true" />
     </mat-form-field>
 
-    <mat-form-field id="Confirm" appearance="outline">
+    <mat-form-field id="password2" appearance="outline">
         <mat-label for="password2">Retype-Password</mat-label>
         <input matInput formControlName="password2" required="true" />
     </mat-form-field>
