--- a/photosharingapp/src/app/add-post/add-profile.component.html
+++ b/photosharingapp/src/app/add-post/add-profile.component.html
@@ -8,10 +8,10 @@
   
       <div mat-dialog-content class="content">
         <div class="row">
-            <mat-form-field id="name" appearance="outline">
+            <!-- <mat-form-field id="name" appearance="outline">
               <mat-label for="name">Name</mat-label>
               <input matInput formControlName="name" required="true" />
-            </mat-form-field>
+            </mat-form-field> -->
             
           <mat-form-field id="caption" appearance="outline">
             <mat-label for="caption">Caption</mat-label>
