--- a/photosharingapp/src/app/login/login.component.css
+++ b/photosharingapp/src/app/login/login.component.css
@@ -1,48 +1,46 @@
-/* .container {
-    margin: 25%;
-} */
-
-.card {
-    margin-left: 35%;
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    height: 400px;
-    /* background: blue; */
-    padding: 2em;
-    border: 1px solid black;
-    border-radius: 10px;
-    box-shadow: 2px 2px 5px 2px black;
+.container {
+    padding-top: 10px;
+    align-items: center;
 }
-.card-head {
-    margin-left: 100px;
+
+.row {
+    display: list-item;
+    gap: 10px
+}
+
+mat-form-field {
+    width: 60%;
+}
+
+.class{
+    text-align: center;
 }
 
 form {
-    margin-left: 50px;
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+    align-items: center;
 }
 
-input {
-    width: 200px;
-    height: 35px;
-    color: black;
-    margin-top: 10px;
+.content{
+    border: 2px solid grey;
+    width: 25%;
+    margin: 5em auto;
+    padding: 2em;
+
 }
 
-button {
-    width: 210px;
-    height: 35px;
-    color: white;
-    background: black;
-    border: none;
-    margin-left: 50px;
-    margin-top: 10px;
+mat-form-field{
+    width: 100%;
 }
 
-.login {
-    width: 200px;
+.btn{
+    margin-left: 15%;
+    width: 70%;
+}
+
+.login{
     text-align: center;
-    margin-left: 50px;
     margin-top: 10px;
 }
