--- a/photosharingapp/src/app/add-post/add-profile.component.css
+++ b/photosharingapp/src/app/add-post/add-profile.component.css
@@ -10,3 +10,10 @@
 mat-form-field {
     width: 100%;
 }
+
+.invisible{
+    display: block;
+    visibility: hidden;
+    height: 0;
+    width: 0;
+}
