--- a/photosharingapp/src/app/view/view.component.html
+++ b/photosharingapp/src/app/view/view.component.html
@@ -1,33 +1,28 @@
-
 <app-navbar></app-navbar>
+<h2>Hello {{loggedInUser}}</h2>
 <h1 class="feed">FEED</h1>
 
 <div class="container">
-  <mat-card class="post-card" *ngFor ="let post of posts">
+  <mat-card class="post-card" *ngFor="let post of posts">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
+      <p>{{post.user}}</p>
       <mat-card-title>{{post.name}}</mat-card-title>
       <mat-card-subtitle></mat-card-subtitle>
     </mat-card-header>
     <img mat-card-image class="image" src="{{post.image}}" alt="">
-    
+
     <mat-card-content>
       <p>{{post.caption}}</p>
     </mat-card-content>
 
     <mat-card-actions>
-      <mat-icon svgIcon="thumbs-up" aria-hidden="false" aria-label="Example thumbs up SVG icon"></mat-icon>
 
 
-      <i><img src="../../assets/favorite_FILL0_wght400_GRAD0_opsz24.svg" class="like"></i>
-      <i><img src="../../assets/chat.svg" class="chat"></i>
-      <!-- <i><img src="../../assets/x.svg"  class="delete"></i> -->
+
+      <button mat-icon-button color="warn" aria-label="Example icon button with a heart icon">
+        <mat-icon>favorite</mat-icon>
+      </button>
     </mat-card-actions>
   </mat-card>
 </div>
-
- 
-
-
-
-
