All posts changed to Feed

--- a/photosharingapp/src/app/my-posts/my-posts.component.html
+++ b/photosharingapp/src/app/my-posts/my-posts.component.html
@@ -2,7 +2,7 @@
 <h2>Hello {{loggedInUser}}</h2>
 
 <nav>
-  <button mat-raised-button><a routerLink="/view">All POSTS</a></button>
+  <button mat-raised-button><a routerLink="/view">FEED</a></button>
   <button mat-raised-button><a routerLink="/my-posts">MY POSTS</a></button>
 </nav>
 
