--- a/photosharingapp/src/app/my-posts/my-posts.component.html
+++ b/photosharingapp/src/app/my-posts/my-posts.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<h2>Hello {{loggedInUser}}</h2>
+<!-- <h2>Hello {{loggedInUser}}</h2> -->
 
 <nav>
   <button mat-raised-button><a routerLink="/view">FEED</a></button>
