Input type updated for password

--- a/photosharingapp/src/app/login/login.component.html
+++ b/photosharingapp/src/app/login/login.component.html
@@ -22,7 +22,7 @@
 
         <mat-form-field id="password" appearance="outline">
           <mat-label for="password">Password</mat-label>
-          <input matInput formControlName="password" required="true" />
+          <input matInput formControlName="password" type="password" required="true" />
         </mat-form-field>
 
         <p>{{invalidPassword}}</p>
