--- a/photosharingapp/src/app/register/register.component.html
+++ b/photosharingapp/src/app/register/register.component.html
@@ -22,13 +22,13 @@
 
     <mat-form-field id="password" appearance="outline">
         <mat-label for="password">Password</mat-label>
-        <input matInput formControlName="password" required="true" />
+        <input matInput formControlName="password" type="password" required="true" />
       </mat-form-field>
    
 
       <mat-form-field id="confirmPassword" appearance="outline">
         <mat-label for="confirmPassword">confirmPassword</mat-label>
-        <input matInput formControlName="confirmPassword" required="true" />
+        <input matInput formControlName="confirmPassword" type="password" required="true" />
       </mat-form-field>
     <p class="invaild">{{invalidPassword}}</p>
 
