--- a/photosharingapp/src/app/profile/profile.component.html
+++ b/photosharingapp/src/app/profile/profile.component.html
@@ -1,1 +1,43 @@
-<p>profile works!</p>
+
+<div class="content">
+    <div class="card-head class" >
+        
+    </div>
+    
+    
+    
+    <div mat-dialog-content class="container">
+      <div class="card">
+    
+        <mat-form-field id="username" appearance="outline">
+            <mat-label for="username">Username</mat-label>
+            <input matInput formControlName="username" required="true" />
+          </mat-form-field>
+    
+          <mat-form-field id="email" appearance="outline">
+            <mat-label for="email">Email</mat-label>
+            <input matInput formControlName="email" required="true" />
+          </mat-form-field>
+        <p class="invaild">{{invalidEmail}}</p>
+    
+        <mat-form-field id="password" appearance="outline">
+            <mat-label for="password">Password</mat-label>
+            <input matInput formControlName="password" required="true" />
+          </mat-form-field>
+       
+    
+          <mat-form-field id="confirmPassword" appearance="outline">
+            <mat-label for="confirmPassword">confirmPassword</mat-label>
+            <input matInput formControlName="confirmPassword" required="true" />
+          </mat-form-field>
+        <p class="invaild">{{invalidPassword}}</p>
+    
+        <div mat-dialog-actions>
+          <button mat-raised-button color="primary" type="submit" class="btn" [disabled]="">Register</button>
+          <p class="login">Already have an account? <a href="/login">Login</a>.</p>
+        </div>
+    
+      </div>
+    </div>
+    </form>
+    </div>
