--- a/photosharingapp/src/app/profile/profile.component.html
+++ b/photosharingapp/src/app/profile/profile.component.html
@@ -1,1 +1,17 @@
-<p>profile works!</p>
+<form>
+<mat-form-field id="username">
+    <mat-label for="username">
+        <p></p>
+    </mat-label>
+
+
+</mat-form-field>
+
+<mat-form-field id="email">
+    <mat-label for="email">
+        <p>{{user.username}}</p>
+    </mat-label>
+
+    
+</mat-form-field>
+</form>
