--- a/photosharingapp/src/app/view/view.component.html
+++ b/photosharingapp/src/app/view/view.component.html
@@ -20,14 +20,10 @@
     </mat-card-content>
 
     <mat-card-actions>
-      <!-- <span><app-like></app-like></span> -->
-      <span>
-        <button (click)="toggleLike(post._id)" (click) = "getPost(post._id)" [class.liked]="isLiked">
-          <span [class]="isLiked ? 'heart-icon liked' : 'heart-icon'">&#10084;</span>
-        </button>
-        {{getLikes}}
-      </span>
+      <span><app-like [posts]="posts"></app-like></span>
       <span><app-comment></app-comment> </span>
     </mat-card-actions>
+
   </mat-card>
+
 </div>
