--- a/photosharingapp/src/app/profile/profile.component.html
+++ b/photosharingapp/src/app/profile/profile.component.html
@@ -1,23 +1,17 @@
-
-
-
 <form>
-<mat-form-field id="username" ngIf="user">
+<mat-form-field id="username">
     <mat-label for="username">
-        <p>{{user.username}}</p>
+        <p></p>
     </mat-label>
 
 
 </mat-form-field>
 
-<mat-form-field id="email" ngIf="user">
+<mat-form-field id="email">
     <mat-label for="email">
-        <p>{{user.email}}</p>
+        <p></p>
     </mat-label>
 
     
 </mat-form-field>
 </form>
-
-
-
