--- a/photosharingapp/src/app/view/view.component.html
+++ b/photosharingapp/src/app/view/view.component.html
@@ -22,7 +22,8 @@
     
 
     <mat-card-actions>
-      <span><app-like [posts]="posts"></app-like></span>
+      <span><app-like [post]="post"></app-like></span>
+      <!-- &#10084; - {{post.likes.length}} -->
       <span><app-comment></app-comment> </span>
     </mat-card-actions>
 
