--- a/photosharingapp/src/app/view/view.component.html
+++ b/photosharingapp/src/app/view/view.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<h2>Hello {{loggedInUser | uppercase}}</h2>
 
 <nav>
   <button mat-raised-button><a routerLink="/view">FEED</a></button>
