--- a/photosharingapp/src/app/navbar/navbar.component.html
+++ b/photosharingapp/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
         <span>PHOTO SHARING APP</span>
         <span class="example-spacer"></span>
 
-        <button mat-raised-button (click)="add()">+</button>
+        <button mat-raised-button (click)="add()">+ Add post</button>
          <button mat-button [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon></button>
           
           <mat-menu #menu="matMenu">
