--- a/photosharingapp/src/app/view/view.component.html
+++ b/photosharingapp/src/app/view/view.component.html
@@ -17,7 +17,7 @@
     <img mat-card-image class="image" src="{{post.image}}" alt="">
 
     <mat-card-content>
-      <p>{{post.caption}}</p>
+      <p class="caption">{{post.caption}}</p>
     </mat-card-content>
 
     <mat-card-actions>
