--- a/photosharingapp/src/app/my-posts/my-posts.component.css
+++ b/photosharingapp/src/app/my-posts/my-posts.component.css
@@ -65,3 +65,13 @@
     justify-content: space-around;
     margin: 2em auto;
   }
+
+  .caption{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 700;
+  }
+
+  .name {
+
+    font-size: large;
+  }
