--- a/photosharingapp/src/app/navbar/navbar.component.html
+++ b/photosharingapp/src/app/navbar/navbar.component.html
@@ -8,7 +8,8 @@
          <button mat-button [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon></button>
           
           <mat-menu #menu="matMenu">
-            <!-- <button mat-menu-item [routerLink]="['/','profile']">profile</button> -->
+            <button mat-menu-item [routerLink]="['/','profile']">profile</button>
+            <button mat-menu-item [routerLink]="['/','my-posts']">my posts</button>
             <button mat-menu-item (click)="logOut()">sign out</button>
           </mat-menu>
          
