--- a/photosharingapp/src/app/like/like.component.html
+++ b/photosharingapp/src/app/like/like.component.html
@@ -1,7 +1,6 @@
 <div *ngIf="post">
-
-<button [class.liked]="isLiked" (click)="getPost(post._id)">
-  <span [class]="isLiked ? 'heart-icon liked' : 'heart-icon'">&#10084;</span>
+<button [class.liked]="post.isLiked" (click)="postLike(post._id)">
+  <span  class="heart-icon">&#10084;</span>
   {{post.likes.length}}
 </button>
  </div>
