--- a/photosharingapp/src/app/my-posts/my-posts.component.css
+++ b/photosharingapp/src/app/my-posts/my-posts.component.css
@@ -66,12 +66,13 @@
     margin: 2em auto;
   }
 
-  .caption{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 700;
-  }
-
-  .name {
-
+  .name{
+    /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+    font-weight: 600;
     font-size: large;
   }
+/* 
+  .caption {
+
+    
+  } */
