--- a/photosharingapp/src/app/navbar/navbar.component.html
+++ b/photosharingapp/src/app/navbar/navbar.component.html
@@ -1,14 +1,14 @@
 <p>
     <mat-toolbar class="navbar">
       <mat-toolbar-row>
-        <span>PHOTO SHARING APP</span>
+        <span>{{user}} - ViewYou</span>
         <span class="example-spacer"></span>
 
         <button mat-raised-button (click)="add()">+ Add post</button>
          <button mat-button [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon></button>
           
           <mat-menu #menu="matMenu">
-            <button mat-menu-item [routerLink]="['/','profile']">profile</button>
+            <!-- <button mat-menu-item [routerLink]="['/','profile']">profile</button> -->
             <button mat-menu-item [routerLink]="['/','my-posts']">my posts</button>
             <button mat-menu-item (click)="logOut()">sign out</button>
           </mat-menu>
