--- a/photosharingapp/src/app/view/view.component.css
+++ b/photosharingapp/src/app/view/view.component.css
@@ -73,11 +73,11 @@ nav {
   margin: 2em auto;
 }
 
-.name {
-
+.name{
+  /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+  font-weight: 600;
   font-size: large;
 }
-
 button {
   border: none;
   background: none;
@@ -94,8 +94,8 @@ button {
   left: 5px;
 }
 
-.caption{
+/* .caption{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 700;
-}
+} */
 
